    - testsuite-checking/expected-results-ia64-linux-gnu-libc: update
    - Update debian/patches/localedata/tailor-iso14651_t1.diff
    - Add debian/patches/localedata/locale-hsb_DE.diff
    - Update debian/patches/localedata/first_weekday.diff
    - Update testsuite-checking/expected-results-sparc-linux-gnu-libc
    - Update testsuite-checking/expected-results-sparcv9b-linux-gnu-sparcv9b

  [ Aurelien Jarno ]
  * Enable multi-arch.
  * Add debian/patches/s390/cvs-longjmp.diff from upstream to
    fix ____longjmp_chk on s390 and s390x.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/submitted-rtld_lock_recursive.diff: New patch to
    fix elf/ build on hurd-i386.
  * debian/patches/hurd-i386/local-longjmp_chk.diff: New patch to fix
    debug/____longjmp_chk.S build on hurd-i386.
  * Update debian/patches/hurd-i386/local-pthread.diff.
  * Update debian/testsuite-checking/expected-results-i486-gnu-libc.

  [ Petr Salinger]
  * define __rtld_lock_initialize also in linuxthreads <bits/libc-lock.h>
    variant (enhance local-linuxthreads-weak.diff).
  * allow failure of tst-longjmp_chk.out on GNU/kFreeBSD
  * Add kfreebsd/local-dosavesse.diff, which does not work,
    so rather use also added kfreebsd/local-nosavesse.diff

 -- Clint Adams <schizo@debian.org>  Sat, 30 Jan 2010 14:29:37 -0500

eglibc (2.10.2-6) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * kfreebsd/local-sysdeps.diff: update to revision 2957 (from glibc-bsd).
  * Don't run the testsuite in parallel, as it sometimes causes some failures
    in some tests.
  * Add patches/any/cvs-malloc_info-init.diff to fix malloc_info() with no
    malloc() done.  Closes: #562679.
  * Add patches/sh4/submitted-set_fpscr.diff to add __set_fpscr() prototype.
    Closes: #565369.
  * debian/rules.d/build.mk: Add --with-pkgversion and --with-bugurl
    arguments.

  [ Samuel Thibault ]
  * patches/hurd-i386/local-pthread.diff: New hurd-only patch to provide
    LIBPTHREAD_SO and disable nscd.