@@ -5,16 +5,16 @@
 
 --- a/nis/nss_nis/nis-hosts.c
 +++ b/nis/nss_nis/nis-hosts.c
-@@ -456,7 +456,11 @@ _nss_nis_gethostbyname4_r (const char *name, struct gaih_addrtuple **pat,
- {
+@@ -260,7 +260,11 @@
+ 
    char *domain;
    if (yp_get_default_domain (&domain))
 -    return NSS_STATUS_UNAVAIL;
 +    {
-+      *herrnop = HOST_NOT_FOUND;
++      *h_errnop = HOST_NOT_FOUND;
 +      *errnop = errno;
 +      return NSS_STATUS_UNAVAIL;
 +    }
  
-   /* Convert name to lowercase.  */
-   size_t namlen = strlen (name);
+   if (buflen < sizeof *data + 1 + pad)
+     {
